2006-12-22 Patrick Galbraith <patg@patg.net>, Alexey Stroganov (4.00)
* Added Alexey Stroganov's patch which fixes varying number of columns in 
  multiple result sets. Added new test cases to 80procs.t (bug #21028) 
* Added Philip Stoev's patch for DATA_TYPE date and time columns (bug #23988)
* New Versioning! 4.0 now. This dev tree will now become trunk
* Turned off prepared statements by default

2006-10-10 Patrick Galbraith <patg@patg.net>, Alexey Stroganov (3.0009_1)
* Added fbind and bind alloc to dbd_st_describe. This was causing a crash
  when using with mod_perl

2006-10-10 Patrick Galbraith <patg@patg.net> (3.0008_1)
* Added patch for SSL Verify Certificate (Thanks Eric Chen!)
* Added multiple fixes to dbd_st_prepare which fixed variable overwrite
  and unset increment counter. Also improved loop which checks statements
  for presence of "LIMIT" by using a pointer as opposed to char array
  increment variable. These errors were showing up in OpenBSD and other
  Unixen (which I think all BSD-based) (Thanks to Kyle George!)
* Added fix to Makefile.PL to obtain correct build flags on VMS 
  (Thanks to Eric Milkie!)
* Fixed casting of num_params to unsigned int in calls to NewZ in mysql.xs

2006-10-07 Patrick Galbraith <patg@patg.net>, Jim Winstead <jimw@mysql.com>
  (3.0007_2)
  * Added UTF8 patch from Dominic Mitchell (Thanks!)
  * Fixed declaration of "row" in mysql_st_internal_execute which caused compile
    errors on some platforms
  * Fix documentation for _ListDBs to remove incorrect information about
    limitations of data_sources(). (RT #20843, patch by Ann Barcomb)
  * Fix typo in example (missing quote). (RT #15086)
  * Mention in POD that 'localhost' always means to connect via UNIX socket,
    and 127.0.0.1 must be used for TCP/IP to localhost (RT #14942, reported by
    Alessandro Ranellucci)
  * Fix typos in Makefile.PL (RT#16178, reported by Gavin Shelley)

2006-09-08 Jim Winstead <jimw@mysql.com>, Patrick Galbraith <patg@mysql.com>