@@ -1,9 +1,15 @@
 2006-12-22 Patrick Galbraith <patg@patg.net>, Alexey Stroganov (4.00)
 * Added Alexey Stroganov's patch which fixes varying number of columns in 
-  multiple result sets. Added new test cases to 80procs.t (bug #21028) 
+  multiple result sets. Added new test cases to 80procs.t based of his
+  test script (bug #21028) (Thanks Alexey!)
 * Added Philip Stoev's patch for DATA_TYPE date and time columns (bug #23988)
-* New Versioning! 4.0 now. This dev tree will now become trunk
+  (Thanks Philip!) 
+* Reworked (for working with 4.0, which doesn't support sqlstate) Philip Stoev's 
+  patch for sqlstate, bug #23935 (Thanks Philip!)
+* New Versioning! 4.0.0 now. This dev tree will now become trunk
+* Cleaned up much code that failed between versions (!!!)
 * Turned off prepared statements by default
+* Tested this with 5.1, 5.0, 4.1, 4.0. Works with ALL these versions!
 
 2006-10-10 Patrick Galbraith <patg@patg.net>, Alexey Stroganov (3.0009_1)
 * Added fbind and bind alloc to dbd_st_describe. This was causing a crash
